--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 :root {
-  --main: #160121;
+  --main: #ffffffa7;
+  --nav: #160121;
   --accent1: #3c0a44;
   --accent2: #671b61;
   --accent3: #893271;
   --accent4: #ac5180;
-  --acccent5: #cf7793;
+  --accent5: #cf7793;
   --accent6: #f1a5ad;
+  --bg: #671b6119;
+  --bgList: rgb(255, 255, 255);
 }
 body {
-  background-color: #ac518074;
+  height: 6040px;
+  background-color: var(--main);
   font-family: cursive;
 
   margin: 0;
@@ -20,7 +24,7 @@ nav {
   width: 100%;
   height: 40px;
   top: 0;
-  background-color: var(--main);
+  background-color: var(--nav);
   position: fixed;
   display: flex;
   text-align: center;
@@ -40,6 +44,7 @@ nav h1:hover {
 }
 /* container input */
 .container {
+  background-color: var(--bg);
   max-width: 70%;
   padding: 10px;
   margin: auto;
@@ -65,6 +70,7 @@ nav h1:hover {
   margin-top: 10px;
 }
 select {
+  cursor: pointer;
   margin: 1px auto;
   width: 30%;
   height: 20px;
@@ -82,6 +88,7 @@ select {
 
 .container form input {
   color: white;
+  cursor: pointer;
   font-weight: 600;
   border: solid 2px black;
   box-shadow: 0 5px 5px var(--main);
@@ -89,4 +96,114 @@ select {
   border-radius: 5px;
   margin: 5px;
   padding: 4px;
+}
+.container form .sub-cover input {
+  margin-top: 10px;
+}
+.container form .sub-cover input:hover {
+  background-color: #3c0a44;
+}
+/* list proses */
+.list-proses,
+.list-selesai {
+  /* margin-bottom: 200px; */
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* margin: auto; */
+}
+.title {
+  z-index: 9999;
+  margin-top: 20px;
+  margin-bottom: 3px;
+}
+.list-pr {
+  padding-inline: 5px;
+  border-radius: 20px;
+  margin: 4px 0;
+  /* border: 2px solid var(--accent2); */
+  box-shadow: 0 10px 20px -10px var(--accent2);
+  display: flex;
+  height: min-content;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-pr div {
+  word-wrap: break-word;
+  justify-content: center;
+  height: 100%;
+  max-width: 85%;
+  flex-direction: column;
+  text-align: left;
+}
+#done {
+  border: none;
+  cursor: pointer;
+  appearance: none;
+  background-color: inherit;
+  margin-right: 10px;
+  height: 30px;
+}
+#done:hover,
+.side-list img:hover {
+  transform: scale(1.1);
+}
+.list-pr div h1 {
+  margin-top: 8px;
+  margin-left: 7px;
+}
+.list-main h1 {
+  margin-left: 7px;
+  top: 0;
+  margin-top: 8px;
+}
+.list-pr div p,
+.list-main p {
+  margin-top: -15px;
+  text-align: left;
+  margin-left: 10px;
+  background-color: var(--accent4);
+  width: max-content;
+  border-radius: 20px;
+  padding-inline: 5px;
+}
+.list-main p {
+  margin-top: 5px;
+}
+.list-main .node-list {
+  word-wrap: break-word;
+  text-align: left;
+}
+
+.list-ss {
+  padding-inline: 5px;
+  border-radius: 20px;
+  margin: 4px 0;
+  /* border: 2px solid var(--accent2); */
+  box-shadow: 0 10px 20px -10px var(--accent2);
+  display: flex;
+  height: min-content;
+  /* flex-wrap: wrap; */
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.list-main {
+  max-width: 80%;
+}
+.side-list {
+  width: 37px;
+  display: flex;
+  margin-inline: 10px;
+  flex-direction: column;
+}
+.side-list img {
+  cursor: pointer;
+  margin: 3px;
+}
+.list-ss,
+.list-pr {
+  background-color: var(--bgList);
 }
